# gss-ntlmssp

./: .gitignore  BUILD.txt  COPYING  Makefile.am  README.md  README.txt  TESTING.txt  conf_macros.m4  configure.ac  version.m4
.github/workflows/: ccpp.yml
contrib/: gssntlmssp.spec.in
doc/: compatibility.md  release-process.md
examples/: mech.ntlmssp.in  test_user_file.txt  test_user_file2.txt  test_user_file3.txt
man/: Makefile.am  gssntlmssp.8.xml
po/: LINGUAS  en_GB.po  fr.po  gssntlmssp.pot  id.po  ka.po  ko.po  tr.po  zanata.xml  zh_Hant.po
src/: crypto.c  crypto.h  debug.c  debug.h  external.c  gss_auth.c  gss_creds.c  gss_err.c  gss_names.c  gss_ntlmssp.c  gss_ntlmssp.h  gss_ntlmssp_winbind.h  gss_sec_ctx.c  gss_serialize.c  gss_signseal.c  gss_spi.c  gssapi_ntlmssp.h  ntlm.c  ntlm.h  ntlm_common.h  ntlm_crypto.c  winbind.c
tests/: env1.sh  env2.sh  ntlmssptest.c
